<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="contentDescription"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/title_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#80CBC4"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="serif-monospace" />

    </LinearLayout>

    <ImageView
        android:id="@+id/typewriter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_linear_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/typewriter_in_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/typewriter"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#80CBC4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/hours"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_one"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_three"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_four"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_five"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_six"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:fontFamily="@font/iceland" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>